Made tag filter table slimmer Reworked style for card grid Fixed title alignment on GameView, AllPlayers, and AllGames

--- a/neuro_arcade/reactapp/src/styles/components/Banner.module.css
+++ b/neuro_arcade/reactapp/src/styles/components/Banner.module.css
@@ -15,9 +15,6 @@
     display: none;
 }
 
-.TabSwitcher {
-    margin: 0 auto;
-}
 .TabSwitcher > * > * > * {
     width: 15em;
 }
