--- a/neuro_arcade/reactapp/src/styles/components/TagFilter.module.css
+++ b/neuro_arcade/reactapp/src/styles/components/TagFilter.module.css
@@ -13,7 +13,7 @@
         font-size: 1.75em;
     }
     .Tags {
-        margin: 2em;
+        margin: 2em 1em;
         width: 15em;
         display: flex;
         justify-content: center;
@@ -44,7 +44,7 @@
 
 #home {
     position: fixed;
-    margin-top: 4.5em;
+    margin-top: 4.25em;
     margin-left: 12em;
     height: fit-content;
     z-index: 20;
@@ -53,7 +53,7 @@
         display: none;
     }
     .Tags {
-        margin: 1em;
+        margin: 1em 0.5em;
     }
 }
 
